Make code compatible with Java SE 8