@@ -2,6 +2,7 @@ package io.github.janhicken.surefire.scalatest;
 
 import org.apache.maven.surefire.booter.BaseProviderFactory;
 import org.apache.maven.surefire.booter.ForkingReporterFactory;
+import org.apache.maven.surefire.providerapi.ProviderParameters;
 import org.apache.maven.surefire.report.ConsoleStream;
 import org.apache.maven.surefire.report.DefaultDirectConsoleReporter;
 import org.apache.maven.surefire.report.ReporterConfiguration;
@@ -15,7 +16,8 @@ import org.scalatest.tools.SurefireReporter;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.PrintStream;
-import java.nio.charset.StandardCharsets;
+import java.io.UnsupportedEncodingException;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -34,9 +36,9 @@ public class ScalaTestProviderTest {
     @Before
     public void setUp() throws Exception {
         this.output = new ByteArrayOutputStream();
-        final var providerParameters = new TestProviderParameters(
+        final ProviderParameters providerParameters = new TestProviderParameters(
             new PrintStream(output),
-            List.of(
+            Arrays.asList(
                 ScalaTestProvider.class, SurefireReporter.class,
                 ScalaTestProviderTest.class, ExampleSpec.class, HiddenSpec.class
             ),
@@ -48,8 +50,8 @@ public class ScalaTestProviderTest {
 
     @Test
     public void test_findExampleSpec() {
-        final var suites = provider.getSuites();
-        final var list = StreamSupport.stream(suites.spliterator(), false)
+        final Iterable<Class<?>> suites = provider.getSuites();
+        final List<Class<?>> list = StreamSupport.stream(suites.spliterator(), false)
             .collect(Collectors.toList());
         assertEquals("The discovery suites list must have exactly one entry",
             1, list.size());
@@ -58,10 +60,10 @@ public class ScalaTestProviderTest {
     }
 
     @Test
-    public void test_run() {
+    public void test_run() throws UnsupportedEncodingException {
         provider.invoke(null);
 
-        final var outputString = output.toString(StandardCharsets.UTF_8);
+        final String outputString = output.toString("UTF-8");
         assertTrue(outputString.contains("- should do something without exception"));
         assertTrue(outputString.contains("- should ignore something !!! IGNORED !!!"));
         assertTrue(outputString.contains("- should fail dividing by 0 *** FAILED ***"));
@@ -80,7 +82,8 @@ public class ScalaTestProviderTest {
             setProviderProperties(new HashMap<>());
             setReporterConfiguration(new ReporterConfiguration(tmpDir, true));
 
-            final var classNames = discoveredClasses.stream().map(Class::getName).collect(Collectors.toList());
+            final List<String> classNames =
+                discoveredClasses.stream().map(Class::getName).collect(Collectors.toList());
             new DefaultScanResult(classNames).writeTo(getProviderProperties());
         }
 
